--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-cli",
-  "version": "1.0.0",
+  "name": "nodetemplater",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,12 @@
   },
   "author": "iDimaBR",
   "license": "MIT",
+  "bin": {
+    "nodetemplater": "./index.js"
+  },
   "dependencies": {
     "commander": "^11.1.0",
+    "nodetemplater": "^1.0.1",
     "readline": "^1.3.0"
   }
 }
